second fixed ticker z-index

--- a/src/styles/ticker.scss
+++ b/src/styles/ticker.scss
@@ -1,14 +1,14 @@
 .ticker{
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
-  z-index: -5;
-
-  &_1{
-    z-index: 1;
-  }
+  z-index: 1;
 
   &_put{
     border-top: none;
+  }
+
+  &_download{
+    z-index: -5;
   }
   
   &:hover  &__box{
